# ComputerGraphics

./: CMakeLists.txt
task_01/: task_01  task_01.cpp
task_02/: RedFragmentShader.fragmentshader  task_02  task_02.cpp
task_03/: BlueFragmentShader.fragmentshader  task_03  task_03.cpp
task_04/: ColorFragmentShader.fragmentshader  task_04  task_04.cpp
